...
                    }
                    .buttonStyle(.plain)
                    .disabled(viewModel.isLoadingFromISBN)
                }
                
                Section(header: Text("Book Details").foregroundColor(AppTheme.colorPrimaryText(for: themeManager.isDarkMode))) {
                    TextField("Book Title", text: $viewModel.title.animation(nil))
                        .foregroundColor(AppTheme.colorPrimaryText(for: themeManager.isDarkMode))
                    TextField("Author", text: $viewModel.author.animation(nil))
                        .foregroundColor(AppTheme.colorPrimaryText(for: themeManager.isDarkMode))
                    
                    Picker("Genre", selection: $viewModel.selectedGenre) {
                        ForEach(viewModel.genres, id: \.self) { genre in
                            Text(genre)
                                .foregroundColor(AppTheme.colorPrimaryText(for: themeManager.isDarkMode))
...
                                ProgressView()
                                    .scaleEffect(0.8)
                                    .accentColor(.white)
                                Text("Adding Book...")
                                    .foregroundColor(.white)
                            } else {
                                Text("Add Book")
                                    .fontWeight(.semibold)
                                    .foregroundColor(.white)
                            }
                            Spacer()
                        }
                        .padding()
...
